Output can be sent directly to dctimestep in ASCII or binary stream.

Replaced existing gendaylit.c with improved version from Wendelin Sprenger
and Jan Wienold of ISE.

Improved accuracy of ambient calculation for large -ad settings.  Thanks
to Lars Grobe for noticing the problem.

Added -r option to gendaymtx to rotate the sky the specified number of
degrees about the zenith as suggested by A. McNeil.

Axel Jacobs added -pal eco color map that does a blue-red-yellow scale.

Created bsdf2klems tool to convert from various BSDF representations to
Klems basis matrix in XML file.

Fixed problem with inappropriate reciprocity enforcement on tensor
tree reduction in genBSDF.  (Thanks to A.McNeil for discovering issue.)

Fixed bug in isotropic tensor tree sampling for impinging rays
exactly normal to surface.  Thanks to Peter Apian-Bennewitz for
discovering and pointing out the error.

Fixed double-counting bug in mirror material with alternate type.
Thanks to David Geisler-Moroder for spotting the problem and helping
to fix it.

Created rcollate program to resize and transpose matrix data for Andy
McNeil's 5-phase annual simulation method.

Added epw2wea conversion program by Christoph Reinhart.

Implemented Perlin's improved noise function with help from Rahul Narain.
This will change the appearance of renderings using this function.

Added "origin" command to rvu as requested by John Mardaljevic
to place view origin at selected point in scene.

Switch to Perl versions of objview and objpict written by Axel Jacobs.

Improved rendering speed of scenes with aliases by not entering new
modifiers into table if they are the same as the previously defined
modifier for that name.

Made it so icalc and rcalc search RAYPATH directories for *.cal files
given on command line.  This simplifies script writing and makes these
utilities consistent with other tools in Radiance.

Added triangulation routine to handle convex polygons in obj2mesh.